# gpu_accel_ydf

./: .bazelrc  .gitignore  BUILD  GPU_ACCEL_MANUAL.md  MODULE.bazel  WORKSPACE  experiment.sh  experiment_avg.sh  experiment_depth.sh  experiment_timing.sh  experiment_timing_total.sh  experiment_training_time.sh  generate_trunk_data.py
benchmarks/results/: aws_scalar_acc_runt_25-11-14-1920
benchmarks/results/ydf_projection_matrices/: projection_matrices.txt  projection_matrices_might_allow_empty.txt  projection_matrices_might_allow_empty_seed_21.txt  projection_matrices_might_allowempty_pdf_10_n_proj_10.txt  projection_matrices_might_seed21_allowempty_pdf_1_5_10_projections.txt  projection_matrices_seed21_allow_empty_pdf_10.txt  projection_matrices_trunk_2048_2048_seed_21_default.txt  projection_matrices_trunk_2048x4096_seed21_default.txt
benchmarks/src/: parallel_chrono.py  plot_ydf_projection_matrix.ipynb
benchmarks/src/bash_scripts/: accuracy_runtime.sh
benchmarks/src/microbenchmarks/: histogram_test  main.cu  randomprojection.cu  randomprojection.cuh
benchmarks/src/utils/: download_cc18_datasets.ipynb  make_trunk_dataset.py  set_cpu_e_features.sh  utils.py
examples/: BUILD  train_oblique_forest.cc
toolchains/: cc_toolchain_config.bzl
yggdrasil_decision_forests/dataset/: BUILD  vertical_dataset_io.cc  vertical_dataset_io.h
yggdrasil_decision_forests/learner/decision_tree/: BUILD  decision_tree.proto  oblique.cc  oblique.h  randomprojection.cu  randomprojection.hpp  splitter_scanner.h  training.cc  (+2 more)
yggdrasil_decision_forests/utils/: parallel_chrono.h
(+141 files in other folders)
